# MetServ-VL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dataset/: image-caption.json
dataset/labels/: vlm_test_dataset.json
docs/: DATASET.md  MODIFICATION_NOTES.md
examples/: run_evaluation.py
src/vlm_weather/: __init__.py  common.py
src/vlm_weather/evaluators/: compute_score.py  embed_score.py  llm_judge.py  qwen3_embed.py
src/vlm_weather/extractors/: docx.py  docx_images.py  pdf.py
